--- a/client/src/app/templates/aide-financiere-form/app.af-form.html
+++ b/client/src/app/templates/aide-financiere-form/app.af-form.html
@@ -238,29 +238,7 @@
     </p><p>
       Les bourses de perfectionnement sont semblables à des bourses  d'études, en ce sens qu'il s'agit de sommes ou d'avantages accordés à des personnes pour leur permettre de poursuivre leur études.  Toutefois, le récipiendaire est habituellement un étudiant diplômé, et le payeur, une université, un organisme de bien-faisance ou un organisme semblable.  En général, les bourses de perfectionnement sont décernées pour des études doctorales ou pour du travail de niveau postdoctoral.
     </p>
-    <div id="signatures">
-      <div  *ngFor="let sig of signatures" >
-    <div class="signature" id={{sig.id}}>
-        <mat-form-field>
-          <input matInput type="text" placeholder="{{sig.name}}" [disabled]="sig.lock || sig.validated" [(ngModel)]="sig.value">
-          <mat-hint *ngIf="sig.name.length == 0">
-            Le nom et le prénom sont obligatoires!
-            </mat-hint>
-        </mat-form-field>
-        <mat-checkbox
-          class="large"
-          [(ngModel)]="sig.check"
-          [(indeterminate)]="indeterminate"
-          [labelPosition]="labelPosition"
-          [disabled]="sig.lock || sig.validated" color="primary">
-          Je confirme et j'accepte la véracité des informations ci-dessus.
-        </mat-checkbox>
-        <br>
-        <button mat-raised-button [disabled]="sig.value.length <= 0 || sig.lock || !sig.check" 
-        (click)="sig.onButtonClick(); controls.updateValueAndValidity()">{{sig.buttonMessage()}}</button>
-    </div>
-  </div>
-</div>
+    <app-sig-block [signatures]="signatures" [controls]="controls"></app-sig-block>
   </div>
 </div>
 
