--- a/client/src/app/templates/demande-achat/demande-achat.component.html
+++ b/client/src/app/templates/demande-achat/demande-achat.component.html
@@ -354,28 +354,8 @@
   </div>
 
   
-<div id="signatures">
-  <span *ngFor="let sig of signatures" >
-      <div class="signature" id={{sig.id}}>
-          <mat-form-field>
-              <input matInput type="text" placeholder="{{sig.name}}" [disabled]="sig.lock || sig.validated" [(ngModel)]="sig.value">
-              <mat-hint *ngIf="sig.value.length === 0">
-                  Le nom et le prénom sont obligatoires!
-                  </mat-hint>
-              </mat-form-field>
-          <mat-checkbox
-          class="large"
-          [(ngModel)]="sig.check"
-          [(indeterminate)]="indeterminate"
-          [labelPosition]="labelPosition"
-          [disabled]="sig.lock || sig.validated" color="primary">
-          Je confirme et j'accepte la véracité des informations ci-dessus.
-          </mat-checkbox>
-          <br>
-          <button mat-raised-button [disabled]="sig.value.length <= 0 || sig.lock || !sig.check" (click)="sig.onButtonClick(); controls.updateValueAndValidity()">{{sig.buttonMessage()}}</button>
-      </div>
-  </span>
-</div>
+<app-sig-block [signatures]="signatures" [controls]="controls"></app-sig-block>
+
 <div class="section-rectangle finance">
     <div id="service-finances">
         <p>Réservé au service des finances</p>
