repair rapport déplacement

--- a/client/src/app/templates/form-deplacement/form-deplacement.component.css
+++ b/client/src/app/templates/form-deplacement/form-deplacement.component.css
@@ -230,11 +230,11 @@ input {
 #references div {
     background-color: #CCD4DF;
 }
-
+/* 
 form {
     width: 100%;
 }
-
+ */
 #calculatorButton {
     display: flex;
     flex-direction: row;
