--- a/client/src/app/templates/annexe/annexe.component.css
+++ b/client/src/app/templates/annexe/annexe.component.css
@@ -26,7 +26,7 @@
     border-right: 2px solid black;
     border-bottom: 1px solid black;
     padding: 0px 5px;
-    min-width: 60px;
+    min-width: 6%;
 }
 
 .output,
@@ -53,7 +53,7 @@
     border-right: 1px solid black;
     border-bottom: 1px solid black;
     padding: 0px 5px;
-    min-width: 60px;
+    min-width: 6%;
 }
 
 #cellule-monetaire-avantVide2 mat-form-field {
