--- a/client/src/app/header/header.component.css
+++ b/client/src/app/header/header.component.css
@@ -3,6 +3,85 @@
 }
 
 .header {
+  width: 200px;
+}
+
+.header .mat-toolbar {
+  height: 64px;
+  background: inherit;
+}
+
+.mat-toolbar.mat-primary {
+  top: 0;
+  z-index: 1;
+  background-color: #222222;
+}
+
+.fill-space{
+  flex: 1 1 auto;
+}
+
+#navbar-links{
+  flex: 1 1 auto;
+  width: 100px;
+  margin:20px;
+  float:right;
+  color:white
+}
+
+#bar{
+  color: #acacac;
+  font-size: 18px;
+
+  display: flex;
+  flex-direction: row;
+}
+#squares {
+  margin-left: 10px;
+  margin-top: 10px;
+  max-height: 10px;
+}
+
+.active{
+  color: #41AAE6 !important;
+}
+
+#link{
+  margin: 20px;
+  color:white
+}
+
+#toolbar{
+  top: 0;
+}
+
+body {
+  margin: 0;
+}
+
+#userName {
+  font-size: 15px;
+  font-weight: lighter;
+  margin-right: 0.8%;
+}
+
+@media print{
+  #toolbar{
+    visibility: hidden;
+  }
+  
+}
+
+
+
+
+
+
+/* .header-container {
+  height: 100%;
+}
+
+.header {
   width: 100%;
 }
 
@@ -78,7 +157,7 @@ body {
     visibility: hidden;
   }
   
-}
+} */
 
 
 
