--- a/client/src/app/header/header.component.html
+++ b/client/src/app/header/header.component.html
@@ -1,5 +1,5 @@
 
-<div *ngIf="currentUser" class="toolbar">
+<!-- <div *ngIf="currentUser" class="toolbar">
     
     <div id="logo">
         POLYTECHNIQUE MONTRÉAL
@@ -19,4 +19,24 @@
         <button button mat-icon-button (click)="logOut()"> <mat-icon> exit_to_app</mat-icon></button>
     </div>
     
-</div>
+</div> -->
+
+<mat-toolbar color="primary" *ngIf="currentUser" id="toolbar" >
+    
+    <span id="bar">POLYTECHNIQUE MONTRÉAL <img id="squares" src="assets/img/poly-squares.png"></span>
+    <div id="navbar-links" >
+        <button mat-button id="link" routerLink="/dashboard" routerLinkActive="active">Tableau de bord</button>
+        <button mat-button id="link" routerLink="/newForm"  routerLinkActive="active" *ngIf="isGestionnaire()">Nouveau formulaire</button>
+    </div>
+    <div id="userName" >
+        {{currentUser.firstName}} {{currentUser.lastName}}
+    </div>
+    <div id="settings" >
+            <button button mat-icon-button routerLink="/admin" routerLinkActive="active" *ngIf="isAdmin()" > <mat-icon> settings </mat-icon></button>
+    </div>
+    <div id="logOut" >
+        <button button mat-icon-button   (click)="logOut()"> <mat-icon> exit_to_app</mat-icon></button>
+    </div>
+    
+    
+</mat-toolbar>
