[header] indentation et commentaires

--- a/client/src/app/header/header.component.html
+++ b/client/src/app/header/header.component.html
@@ -1,26 +1,3 @@
-
-<!-- <div *ngIf="currentUser" class="toolbar">
-    
-    <div id="logo">
-        POLYTECHNIQUE MONTRÉAL
-        <img src="assets/img/poly-squares.png" id="poly-squares">
-    </div>
-    <div id="navbar-links">
-        <button mat-button id="link" routerLink="/dashboard" routerLinkActive="active">Tableau de bord</button>
-        <button mat-button id="link" routerLink="/newForm"  routerLinkActive="active" *ngIf="isGestionnaire()">Nouveau formulaire</button>
-    </div>
-    <div id="userName">
-        {{currentUser.firstName}} {{currentUser.lastName}}
-    </div>
-    <div id="settings">
-            <button button mat-icon-button routerLink="/admin" routerLinkActive="active" *ngIf="isAdmin()"> <mat-icon> settings </mat-icon></button>
-    </div>
-    <div id="logOut">
-        <button button mat-icon-button (click)="logOut()"> <mat-icon> exit_to_app</mat-icon></button>
-    </div>
-    
-</div> -->
-
 <mat-toolbar color="primary" *ngIf="currentUser" id="toolbar" >
     
     <span id="bar">POLYTECHNIQUE MONTRÉAL <img id="squares" src="assets/img/poly-squares.png"></span>
@@ -40,3 +17,6 @@
     
     
 </mat-toolbar>
+<!-- last version of header implementation with <div> in commit 27a786cf (in comments) -->
+<!-- a retard's question : -->
+<!-- https://stackoverflow.com/questions/55661758/css-text-white-space-nowrap-extends-the-div-outside-width-100 -->
