Remplacer les window alerts par des dialog #61 dans la vue d'édition

--- a/client/src/app/edition/edition.component.html
+++ b/client/src/app/edition/edition.component.html
@@ -50,4 +50,5 @@
       </mat-grid-tile>
     </mat-grid-list>
     </div>
+    <mat-spinner id ="spinner" *ngIf="displayProgressSpinner"></mat-spinner>
   </div>
