--- a/client/src/app/edition/edition.component.css
+++ b/client/src/app/edition/edition.component.css
@@ -75,6 +75,13 @@
     width: 100%;
   }
 
+  #spinner {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    z-index: 10;
+  }
+
   @media print {
 
     #edit-form-container {
