--- a/client/src/app/assignation/assignation.component.css
+++ b/client/src/app/assignation/assignation.component.css
@@ -98,3 +98,10 @@ mat-chip:hover .deleteParticipant {
   position: relative;
   top: -25px;
 }
+
+#spinner {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  z-index: 10;
+}
