Remplacer le window alert par un dialog dans la vue d'activation d'un compte #61

--- a/client/src/app/set-password/set-password.component.html
+++ b/client/src/app/set-password/set-password.component.html
@@ -36,4 +36,6 @@
     <p *ngIf="errorMessage">{{ errorMessage }}</p>
 </form>
 
+<mat-spinner id ="spinner" *ngIf="displayProgressSpinner"></mat-spinner>
+
 <h4 *ngIf="isInvalidLink">Lien invalide ou expiré!</h4>
