--- a/client/src/app/set-password/set-password.component.css
+++ b/client/src/app/set-password/set-password.component.css
@@ -21,3 +21,10 @@ ul {
     font-size: 12px;
     color: #B81E32;
 }
+
+#spinner {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    z-index: 10;
+}
