--- a/client/src/app/templates/annexe/annexe.component.html
+++ b/client/src/app/templates/annexe/annexe.component.html
@@ -244,7 +244,7 @@
             <ng-container matColumnDef="perdiem">
                 <th mat-header-cell *matHeaderCellDef id="perdiem-colonne"> per diem <br> repas </th>
                 <td mat-cell *matCellDef="let element" id="perdiem-cell">
-                    <mat-form-field>
+                    <mat-form-field matTooltip={{tooltipPerDiem}} [matTooltipShowDelay]="1000">
                         <input matInput type="number" [(ngModel)]="element.perdiem" (ngModelChange)="updateTotal()" min=0>
                     </mat-form-field>
                 </td>
