--- a/client/src/app/file-uploader/file-uploader.component.html
+++ b/client/src/app/file-uploader/file-uploader.component.html
@@ -20,7 +20,7 @@
     </mat-chip-list>
     
   <button mat-button (click)="upload($event)" *ngIf="state!=='view'">
-    CONFIRMER
+    Télécharger
   </button>
 
 
