--- a/client/src/app/templates/payment-form/paymentForm.component.html
+++ b/client/src/app/templates/payment-form/paymentForm.component.html
@@ -192,8 +192,8 @@
         
         <ng-container matColumnDef="code">
             <th mat-header-cell *matHeaderCellDef> Code de taxes </th>
-            <td mat-cell *matCellDef="let ventilation" class="code">
-                <mat-form-field>
+            <td mat-cell *matCellDef="let ventilation" class="code codeDisable">
+                <mat-form-field >
                     <input matInput type="number" [(ngModel)]="ventilation.code" (ngModelChange)="fg_ventilation_budgetaire.updateValueAndValidity()">
                 </mat-form-field>
             </td>
@@ -201,7 +201,7 @@
 
         <ng-container matColumnDef="t4a">
             <th mat-header-cell *matHeaderCellDef> T4A </th>
-            <td mat-cell *matCellDef="let ventilation" class="t4a">
+            <td mat-cell *matCellDef="let ventilation" class="t4a t4aDisable">
                 <mat-form-field>
                     <input matInput type="number" [(ngModel)]="ventilation.t4a" (ngModelChange)="fg_ventilation_budgetaire.updateValueAndValidity()">
                 </mat-form-field>
