--- a/client/src/app/templates/annexe/annexe.component.css
+++ b/client/src/app/templates/annexe/annexe.component.css
@@ -26,7 +26,6 @@
     border-right: 2px solid black;
     border-bottom: 1px solid black;
     padding: 0px 5px;
-    min-width: 60px;
 }
 
 .output,
@@ -53,11 +52,10 @@
     border-right: 1px solid black;
     border-bottom: 1px solid black;
     padding: 0px 5px;
-    min-width: 60px;
 }
 
-#cellule-monetaire-avantVide2 mat-form-field {
-    width: 20px;
+#cellule-code-avantVide2 mat-form-field {
+    max-width: 60px;
     text-align: center;
 }
 
@@ -66,7 +64,7 @@
     border-left: 2px solid black;
     border-right: 1px solid black;
     border-bottom: 2px solid black;
-    padding: 10px 0px 10px 0px;
+    /*padding: 10px 0px 10px 0px;*/
     font-size: 0.9em;
     text-align: center;
 }
@@ -143,10 +141,6 @@ h4 {
 
 div {
     font-size: 13px;
-}
-
-mat-form-field {
-    
 }
 
 
