#31 bloquer références safirh pour 2 autres forms

--- a/client/src/app/templates/form-deplacement/form-deplacement.component.html
+++ b/client/src/app/templates/form-deplacement/form-deplacement.component.html
@@ -222,7 +222,7 @@
 
 <app-sig-block [signatures]="signatures" [controls]="controls"></app-sig-block>
 
-<div id="references">
+<div id="references" class="managerOnly">
         <p>
             <strong>*</strong> Joindre les pièces justificatives
         </p>
