--- a/client/src/app/templates/voyage-form/voyage-form.component.html
+++ b/client/src/app/templates/voyage-form/voyage-form.component.html
@@ -309,7 +309,7 @@
 
   <app-sig-block [signatures]="signatures" [controls]="controls"></app-sig-block>
 
-<div id="references">
+<div id="references" class="managerOnly">
   <p>
       <strong>*</strong> Joindre les pièces justificatives
   </p>
