--- a/client/src/app/edition/edition.component.html
+++ b/client/src/app/edition/edition.component.html
@@ -34,19 +34,19 @@
         <button mat-raised-button id="print"  (click)="printDiv()" ><mat-icon>print</mat-icon></button>
       </mat-grid-tile>
       <mat-grid-tile *ngIf="state === 'validate'">
-        <button id="valider" mat-raised-button (click)="onValidate()" [disabled]="!canValidate">VALIDER</button>
+        <button id="valider" mat-raised-button (click)="onValidate()" [disabled]="displayProgressSpinner || !canValidate">VALIDER</button>
       </mat-grid-tile>
       <mat-grid-tile *ngIf="state === 'modify'">
-        <button id="soumettre" mat-raised-button (click)="onSend()" [disabled]="!canSubmit" color="primary">SOUMETTRE</button>
+        <button id="soumettre" mat-raised-button (click)="onSend()" [disabled]="displayProgressSpinner || !canSubmit" color="primary">SOUMETTRE</button>
       </mat-grid-tile>
       <mat-grid-tile >
-        <button id="annuler" mat-raised-button (click)="onReturn()">ANNULER</button>
+        <button id="annuler" mat-raised-button (click)="onReturn()" [disabled]="displayProgressSpinner">ANNULER</button>
       </mat-grid-tile>
       <mat-grid-tile *ngIf="canCopy">
-        <button id="copier" mat-raised-button (click)="onCopy()">COPIER</button>
+        <button id="copier" mat-raised-button (click)="onCopy()" [disabled]="displayProgressSpinner">COPIER</button>
       </mat-grid-tile>
       <mat-grid-tile *ngIf="canCancel">
-        <button id="invalider" mat-raised-button color="warn" (click)="onCancel()">INVALIDER</button>
+        <button id="invalider" mat-raised-button color="warn" (click)="onCancel()" [disabled]="displayProgressSpinner">INVALIDER</button>
       </mat-grid-tile>
     </mat-grid-list>
     </div>
