--- a/client/src/app/templates/form-deplacement/form-deplacement.component.css
+++ b/client/src/app/templates/form-deplacement/form-deplacement.component.css
@@ -230,11 +230,11 @@ input {
 #references div {
     background-color: #CCD4DF;
 }
-/* 
+
 form {
     width: 100%;
 }
- */
+
 #calculatorButton {
     display: flex;
     flex-direction: row;
@@ -245,7 +245,16 @@ form {
 }
 
 
+#precision {
+    width: 90%;
+    text-align: center;
+}
 
+#tableaux-explicatifs
+{
+    width:30%;
+    text-align: center;
+}
 
 @media print{
 
@@ -263,6 +272,9 @@ form {
         
     }
         
+    #tableaux-explicatifs{
+        display: none !important;
+      }
         
         
         
