--- a/client/src/app/templates/annexe/annexe.component.html
+++ b/client/src/app/templates/annexe/annexe.component.html
@@ -209,6 +209,8 @@
         </tbody>
     </table>
 
+   
+
         <!-- <tr mat-header-row *matHeaderRowDef="displayedColumnsTotaux"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumnsTotaux;"></tr>
     </table> -->
@@ -244,7 +246,7 @@
             <ng-container matColumnDef="perdiem">
                 <th mat-header-cell *matHeaderCellDef id="perdiem-colonne"> per diem <br> repas </th>
                 <td mat-cell *matCellDef="let element" id="perdiem-cell">
-                    <mat-form-field matTooltip={{tooltipPerDiem}} [matTooltipShowDelay]="1000">
+                    <mat-form-field>
                         <input matInput type="number" [(ngModel)]="element.perdiem" (ngModelChange)="updateTotal()" min=0>
                     </mat-form-field>
                 </td>
@@ -394,5 +396,9 @@
     </table>
 </div>
 
+
+
 </div>
+
+
 </div>
