--- a/client/src/app/header/header.component.html
+++ b/client/src/app/header/header.component.html
@@ -1,20 +1,24 @@
-<mat-toolbar color="primary" *ngIf="currentUser" id="toolbar" >
+<mat-toolbar color="primary" *ngIf="currentUser" id="toolbar">
     
     <span id="bar">POLYTECHNIQUE MONTRÉAL <img id="squares" src="assets/img/poly-squares.png"></span>
-    <div id="navbar-links" >
+    <div id="navbar-links">
         <button mat-button id="link" routerLink="/dashboard" routerLinkActive="active">Tableau de bord</button>
         <button mat-button id="link" routerLink="/newForm"  routerLinkActive="active" *ngIf="isGestionnaire()">Nouveau formulaire</button>
     </div>
-    <div id="userName" >
+    <div id="userName">
         {{currentUser.firstName}} {{currentUser.lastName}}
     </div>
-    <div id="settings" >
+    <div id="settings">
             <button button mat-icon-button routerLink="/admin" routerLinkActive="active" *ngIf="isAdmin()" > <mat-icon> settings </mat-icon></button>
     </div>
-    <div id="logOut" >
-        <button button mat-icon-button   (click)="logOut()"> <mat-icon> exit_to_app</mat-icon></button>
+    <div id="logOut">
+        <button button mat-icon-button (click)="logOut()"
+         matTooltip="Déconnexion" [matTooltipShowDelay]="1500">
+            <mat-icon>
+                exit_to_app
+            </mat-icon>
+        </button>
     </div>
-    
     
 </mat-toolbar>
 <!-- last version of header implementation with <div> in commit 27a786cf (in comments) -->
