--- a/client/src/app/templates/annexe/annexe.component.css
+++ b/client/src/app/templates/annexe/annexe.component.css
@@ -158,20 +158,33 @@ div {
     width: 95%;
 }
 
+
+#tableau-depenses mat-cell
+{
+    overflow:hidden;
+}
+
 #tableaux-explicatifs
 {
     width:30%;
     text-align: center;
 }
 #ventilation-table mat-form-field {
-    width: 75px;
+    width: 85px;
     text-align: left;
 }
+
+.output {
+    max-width:85px;
+    overflow:hidden;
+}
+
 
 #fraisKm-cell {
     width: 100px;
     text-align: left;
 }
+
 
 
 .footer-adder
