bugfix avance voyage

--- a/client/src/app/templates/voyage-form/voyage-form.component.html
+++ b/client/src/app/templates/voyage-form/voyage-form.component.html
@@ -307,8 +307,9 @@
     </form>
   </div>
 
+  <div id="signatures">
   <app-sig-block [signatures]="signatures" [controls]="controls"></app-sig-block>
-
+</div>
 <div id="references" class="managerOnly">
   <p>
       <strong>*</strong> Joindre les pièces justificatives
